# NG-Live

./: README.md
desk-control-app/: .gitignore  CMakeLists.txt  README.md  app.cpp  compile_commands.json
desk-control-app/build_linux/: CMakeCache.txt  Makefile  app  cmake_install.cmake  ws_client
desk-control-app/build_windows/: CMakeCache.txt
desk-control-app/client_session/: CMakeLists.txt
desk-control-app/client_session/include/: chat.h
desk-control-app/client_session/src/: chat.cpp  on_read.cpp
desk-control-app/include/ws/: client.h
desktop-client/: .project
main-server/: .gitignore  .project  README.md  build.gradle  settings.gradle
main-server/common/: .project
main-server/service-chat/: .project
main-server/service-desk-control/: .project
main-server/service-gateway/: .project
main-server/service-user/: .project
main-server/service-webrtc/: .project
main-server/src/main/java/com/nglive/: MainVerticle.java
main-server/src/main/java/com/nglive/dto/: UserDTO.java
main-server/src/main/java/com/nglive/entities/: UserEntity.java
main-server/src/main/java/com/nglive/routers/: AuthRouter.java
main-server/src/main/java/com/nglive/services/: AuthService.java
main-server/src/main/java/com/nglive/shared/: DatabaseHolder.java
main-server/src/main/java/com/nglive/verticles/: DatabaseVerticle.java  HttpVerticle.java  WebsocketVerticle.java
webapp-client/src/: App.tsx
